Mon Mar 28 20:53:44 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): nothing to be removed when no file
	  was deleted.

	* ext/extmk.rb (extmake): restore srcdir.

Mon Mar 28 16:23:26 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/lib/tkextlib/iwidgets/notebook.rb: fixed typo.

Mon Mar 28 08:39:49 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_create): Iconv::Failure requires 3
	  arguments.  (pointed out by NaHi)

Sun Mar 27 00:56:58 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_file): ignore Errno::E* if force option
	  is set. [ruby-dev:25944]

Sat Mar 26 22:51:33 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb (_callback_entry_class?): add for checking whether
	  a class is available for a callback entry.

	* ext/tk/lib/tk.rb (after_cancel): add Tk.after_cancel(afterID) method.

	* ext/tk/lib/tk.rb (array2tk_list): change from private module method
	  of TkComm to public module method.

	* ext/tk/lib/tk.rb (cget): add check that slot argument is not
	  empty string.

	* ext/tk/lib/tk.rb (configinfo): ditto.

	* ext/tk/lib/tk/itemconfig.rb (itemcget): add check that slot argument
	  is not empty string.

	* ext/tk/lib/tk/itemconfig.rb (itemconfiginfo): ditto.

	* ext/tk/lib/tk/entry.rb: add TkEntry#icursor and icursor= (alias of
	  cursor and cursor= method).

	* ext/tk/lib/tk/font.rb: improve font treatment when the font name is
	  empty string.

	* ext/tk/lib/tk/variable.rb: add :variable, :window and :procedure
	  type.

	* ext/tk/lib/tk/variable.rb: improve treatment of array-type
	  tkvariable.

	* ext/tk/lib/tkextlib/blt.rb: add commands for zooming.

	* ext/tk/lib/tkextlib/blt/*: bug fix.

	* ext/tk/lib/tkextlib/treectrl/tktreectrl.rb: bug fix and add methods
	  to call TreeCtrl commands for bindings.

	* ext/tk/sample/tkextlib/blt/*: new sample scripts.

	* ext/tk/sample/tkextlib/treectrl/*: ditto.
